Fixed available cash per portfolio. Show prices in ref currency in buy sell. Changed apparent version number. [#66497398] [#64636484]